// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SmsAppPreferences/> render() should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/sms"
          >
            SMS
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          
           
          My new SMS Integration
          <small
            class="text-muted ml-2"
          >
            +1 415 111 2222
          </small>
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-xl-7"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="title"
            >
              Integration title
            </label>
            <div
              class="container"
            >
              <div
                class="picker emojiPicker"
              >
                <span
                  class="material-icons empty icon"
                >
                  insert_emoticon
                </span>
              </div>
              <input
                class="input form-control"
                id="title"
                placeholder="Ex: Company Support Line"
                required=""
                tabindex="0"
                type="text"
                value="My new SMS Integration"
              />
            </div>
          </div>
          <div
            class="mt-5 mb-5 row"
          >
            <div
              class="col"
            >
              <h4>
                Phone number
              </h4>
              <div
                class="border-bottom py-2 ml-1 mr-1 row"
              >
                <div
                  class="pl-0 col-lg-8"
                >
                  <div
                    class="wrapper"
                  >
                    <div
                      class="wrapper"
                    >
                      <span
                        role="img"
                        style="display: inline-block; font-size: 1em; line-height: 1em; vertical-align: middle;"
                      >
                        🇺🇸
                      </span>
                    </div>
                     
                    <strong>
                      A Phone Number
                    </strong>
                     
                    <span>
                      +1 415 111 2222
                    </span>
                  </div>
                </div>
                <div
                  class="appLink col-lg-4"
                >
                  <a
                    to="/app/settings/phone-numbers/1"
                  >
                    Manage Phone Number
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-5"
          >
            <button
              class="wrapper creation medium"
            >
              Save changes
            </button>
            <button
              class="wrapper float-right destructive medium"
              id="delete-integration"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SmsAppPreferences/> render() should submit a valid payload with the selected phone_number_id 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/sms"
          >
            SMS
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          
           
          My new SMS Integration
          <small
            class="text-muted ml-2"
          >
            +1 415 111 2222
          </small>
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-xl-7"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="title"
            >
              Integration title
            </label>
            <div
              class="container"
            >
              <div
                class="picker emojiPicker"
              >
                <span
                  class="material-icons empty icon"
                >
                  insert_emoticon
                </span>
              </div>
              <input
                class="input form-control"
                id="title"
                placeholder="Ex: Company Support Line"
                required=""
                tabindex="0"
                type="text"
                value="My updated SMS integration"
              />
            </div>
          </div>
          <div
            class="mt-5 mb-5 row"
          >
            <div
              class="col"
            >
              <h4>
                Phone number
              </h4>
              <div
                class="border-bottom py-2 ml-1 mr-1 row"
              >
                <div
                  class="pl-0 col-lg-8"
                >
                  <div
                    class="wrapper"
                  >
                    <div
                      class="wrapper"
                    >
                      <span
                        role="img"
                        style="display: inline-block; font-size: 1em; line-height: 1em; vertical-align: middle;"
                      >
                        🇺🇸
                      </span>
                    </div>
                     
                    <strong>
                      A Phone Number
                    </strong>
                     
                    <span>
                      +1 415 111 2222
                    </span>
                  </div>
                </div>
                <div
                  class="appLink col-lg-4"
                >
                  <a
                    to="/app/settings/phone-numbers/1"
                  >
                    Manage Phone Number
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-5"
          >
            <button
              class="wrapper creation medium isDisabled"
              disabled=""
            >
              <div
                class="spinner spinner-border"
                role="status"
              >
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </div>
              Save changes
            </button>
            <button
              class="wrapper float-right destructive medium"
              id="delete-integration"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
